# corroded-chip8

./: Cargo.toml  README.md  justfile
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  index.js  wasm.js  wasm_bg.wasm
