[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chip8_core = { path = "../chip8_core" }
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window",
] }
